Included nucleus setup for desktop app and included run configurations